# LostEngine3D

./: CMakeLists.txt  CMakePresets.json  LICENSE
LostEngine/Game/: main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/gli/: CMakeLists.txt
libs/gli/gli/: CMakeLists.txt
res/: config.ini
res/shader/: sprite.frag  sprite.vert
src/Engine/: Common.hpp  LostEngine.cpp  LostEngine.hpp
src/Engine/Camera/: Camera.cpp  Camera.hpp
src/Engine/Clock/: Clock.cpp  Clock.hpp
src/Engine/Debug/: Debug.cpp  Debug.hpp
src/Engine/Events/: Events.cpp  Events.hpp
src/Engine/IniParser/: IniParser.cpp  IniParser.hpp
src/Engine/Input/: Input.cpp  Input.hpp
src/Engine/Mesh/: Mesh.cpp  Mesh.hpp
src/Engine/OpenGL/: OpenGL.cpp  OpenGL.hpp
src/Engine/Scene/: Scene.hpp
src/Engine/SceneMenager/: SceneManager.cpp  SceneManager.hpp
src/Engine/Shader/: Shader.cpp  Shader.hpp
src/Engine/Texture/: Texture.cpp  Texture.hpp
src/Engine/Window/: Window.cpp  Window.hpp
src/Game/: Start.cpp
src/Game/Scenes/: TestScene.cpp  TestScene.hpp
